# trs-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 22aea5b5c4c8_initial_migration.py  47a4360edcb2_initial_migration.py  7a503751bd8b_initial_migration.py
scripts/: entrypoint.sh
src/: config.py  enums.py  lifecycle.py  logging.py  main.py  middlewares.py  mq.py  routes.py  scheduler.py  schemas.py
src/api/ai/: client.py  promts.py
src/database/: soft_delete_mixin.py
src/digests/: dependencies.py  models.py  publisher.py  rabbit_routes.py  repositories.py  schemas.py  services.py
src/exceptions/: __init__.py  handlers.py  responses.py  schemas.py
src/relationships/: __init__.py  digests_storylines.py  digests_tags.py  storylines_tags.py
src/sources/: dependencies.py  schemas.py  services.py
src/storylines/: dependencies.py  models.py  publisher.py  rabbit_routes.py  repositories.py  routes.py  schemas.py  services.py
src/tags/: dependencies.py  models.py  repositories.py  services.py
