[project]
name = "trs-api"
version = "0.0.1"
description = "TRS is a service for finding news stories from streams, storing and analyzing them. TRS-API is the main service that provides APIs for the TRS application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=1.6.3",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "faststream[rabbit]>=0.5.48",
    "ollama>=0.6.0",
    "pydantic-settings>=2.11.0",
    "ruff>=0.13.2",
    "scalar-fastapi>=1.4.2",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.37.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    ".venv",
    "migrations"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
